--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.18.1",
     "gsap": "^3.13.0",
@@ -60,7 +61,7 @@
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.2",
-    "recharts": "^2.15.3",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "three": "^0.177.0",
